other/mount-volumes-for-ephemeral-containers/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: default
  labels:
    ephemeral-debug: "true"
spec:
  containers:
    - name: busybox
      image: busybox:1.35
      command: ["sh", "-c", "while true; do sleep 3600; done"]
