other/mount-volumes-for-ephemeral-containers/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mount-volumes-for-ephemeral-containers
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
